--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,12 +3,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  :root {
+    --background: #0f0f0f;
+    --primary: #232d3f;
+    --secondary: #005b41;
+    --accent: #008170;
+  }
+}
+
 @layer components {
   .btn {
     @apply px-4 py-2 rounded-md transition-colors duration-200;
   }
 
   .btn-primary {
-    @apply btn bg-primary-light text-white hover:bg-primary-lighter;
+    @apply btn bg-theme-secondary text-white hover:bg-theme-accent;
   }
 }
